Bug 1229999 - [css-grid] Clamp auto-placed lines to where kMaxLine is in the translated grid.  r=dholbert